<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false">
<android.support.v7.widget.GridLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="3"
    app:rowCount="6">


    <Button
            android:id="@+id/parent_protect"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"

            android:text="@string/parent_protect"
            android:drawableTop="@mipmap/parent_protect"
            />
        <Button
            android:id="@+id/return_home"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/treasure_box_down"
            android:drawableTop="@mipmap/treasure_box_down"
            />
        <Button

            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:enabled="false"
            />
        <Button
            android:id="@+id/kill_virus"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/kill_virus"
            android:drawableTop="@mipmap/kill_virus"
            />
        <Button
            android:id="@+id/harass_intercept"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/harass_intercept"
            android:drawableTop="@mipmap/harass_intercept"
            />
        <Button
            android:id="@+id/software_lock"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/software_lock"
            android:drawableTop="@mipmap/software_lock"
            />
        <Button
            android:id="@+id/app_manager"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/app_manager"
            android:drawableTop="@mipmap/app_manager"
            />
        <Button
            android:id="@+id/flow_bill"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/flow_bill"
            android:drawableTop="@mipmap/flow_bill"
            />
        <Button
            android:id="@+id/mobile_slimming"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/mobile_slimming"
            android:drawableTop="@mipmap/mobile_slimming"
            />
        <Button
            android:id="@+id/safe_toolkit"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/safe_toolkit"
            android:drawableTop="@mipmap/safe_toolkit"
            />
        <Button
            android:id="@+id/wifi_raid"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/wifi_raid"
            android:drawableTop="@mipmap/wifi_raid"
            />
        <Button
            android:id="@+id/root_mode"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/root_mode"
            android:drawableTop="@mipmap/root_mode"
            />
        <Button
            android:id="@+id/nofi_quiet"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/nofi_quiet"
            android:drawableTop="@mipmap/nofi_quiet"
            />
        <Button
            android:id="@+id/security_search"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/security_search"
            android:drawableTop="@mipmap/security_search"
            />
        <Button
            android:id="@+id/permission_manager"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/permission_manager"
            android:drawableTop="@mipmap/permission_manager"
            />
        <Button
            android:id="@+id/grab_tickets"
            style="@style/TreasureBtn"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/grab_tickets"
            android:drawableTop="@mipmap/grab_tickets"
            />

        </android.support.v7.widget.GridLayout>
    </ScrollView>
