<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zzptc.LiuXiaolong.baidu.activity.Search_contacts">
    <android.support.v7.widget.Toolbar
        android:id="@+id/search_contacts_toolbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@mipmap/circle_back"
        android:background="#2D3035"
        >
        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_contacts"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/search_determine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/determine"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray">
        <EditText
            android:id="@+id/et_search"
            android:background="@drawable/search_contacts_edittext_shape"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:drawableLeft="@mipmap/search_contact"
            android:paddingLeft="5dp"
            android:hint="@string/inputNeedSelectContacts"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/search_contacts_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>
