<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.zzptc.LiuXiaolong.baidu.activity.Parent_protect">

    <android.support.v7.widget.Toolbar
        android:id="@+id/parent_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="家人防护"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:src="@mipmap/family_protect"
        android:scaleType="center"
        android:background="?attr/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#F4F4F4"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/onekey"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/onekey_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/onekey_for_help"
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/onekey_for_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onekey_for_help"
                android:layout_toRightOf="@id/onekey_pic"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onekey_for_help_info"
                android:layout_below="@id/onekey_for_help"
                android:layout_toRightOf="@id/onekey_pic"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:textColor="@android:color/darker_gray"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout

            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/protect_family_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/protect_family"
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/protect_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protect_family"
                android:layout_toRightOf="@id/protect_family_pic"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protect_family_info"
                android:layout_below="@id/protect_family"
                android:layout_toRightOf="@id/protect_family_pic"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:textColor="@android:color/darker_gray"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/justime_alert_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/onekey_for_help"
                android:layout_margin="20dp"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/justime_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/justime_alert"
                android:layout_toRightOf="@id/justime_alert_pic"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/justime_alert_info"
                android:layout_below="@id/justime_alert"
                android:layout_toRightOf="@id/justime_alert_pic"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:textColor="@android:color/darker_gray"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
